--- a/styles.css
+++ b/styles.css
@@ -74,16 +74,15 @@ header h1:hover {
 /* İletişim detayları için stil */
 .contact-details {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column; /* Logoları dikey sıralar */
+    align-items: center; /* Ortalamak için */
 }
 
-/* Instagram logo ve metni için düzenleme */
+/* Instagram logosu */
 #instagram-logo {
-    width: 30px; /* Instagram logosu eski boyut */
-    height: auto; /* Yükseklik oranını koruyacak şekilde */
-    margin-right: 10px; /* Logo ile metin arasındaki mesafe */
+    width: 30px;
+    height: auto;
+    margin-right: 10px;
 }
 
 /* Instagram linki stilini güncelleme */
@@ -132,6 +131,13 @@ header h1:hover {
 
 .whatsapp-link:hover {
     text-decoration: underline; 
+}
+
+/* WhatsApp logosunun altına hizalama */
+.whatsapp-container {
+    display: flex;
+    align-items: center; /* Telefon numarasını yatayda hizalar */
+    margin-top: 10px; /* Instagram logosu ile WhatsApp logosu arasına boşluk ekler */
 }
 
 /* Ürün listesi */
@@ -322,4 +328,3 @@ button.prev:hover, button.next:hover {
     background-color: #ff6347; /* Hover durumunda kırmızımsı renk */
     color: white; /* Yazı rengi beyaz olur */
 }
-
