--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,13 @@ header {
 
 /* Drop-down menü stili */
 .dropdown {
-    position: absolute;
-    top: 20px;
+    position: fixed;
+    bottom: 20px;
     left: 20px;
     z-index: 10;
+    background-color: #fff;
+    border: 2px solid #ff6347; /* Kırmızımsı çerçeve rengi */
+    border-radius: 5px;
 }
 
 .dropdown ul {
@@ -47,9 +50,7 @@ header {
     background-color: #fff;
     color: #333;
     text-decoration: none;
-    border: 2px solid #ff6347; /* Kırmızımsı çerçeve rengi */
-    border-radius: 5px;
-    margin-bottom: 5px;
+    border-bottom: 1px solid #ff6347; /* Kırmızımsı çerçeve rengi */
 }
 
 .dropdown a:hover {
@@ -63,6 +64,8 @@ header {
     left: 100%;
     top: 0;
     z-index: 1000;
+    background-color: #fff;
+    border: 2px solid #ff6347; /* Kırmızımsı çerçeve rengi */
 }
 
 .dropdown > ul > li:hover > .submenu {
@@ -70,56 +73,6 @@ header {
 }
 
 .submenu a {
-    white-space: nowrap;
-}
-
-/* Dropdown menüyü ürünler listesinin sol üst köşesine taşımak için stil */
-#urunler-dropdown {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 10;
-}
-
-#urunler-dropdown ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-#urunler-dropdown > ul > li {
-    position: relative;
-}
-
-#urunler-dropdown a {
-    display: block;
-    padding: 10px;
-    background-color: #fff;
-    color: #333;
-    text-decoration: none;
-    border: 2px solid #ff6347; /* Kırmızımsı çerçeve rengi */
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-#urunler-dropdown a:hover {
-    background-color: #ff6347;
-    color: white;
-}
-
-#urunler-dropdown .submenu {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: 0;
-    z-index: 1000;
-}
-
-#urunler-dropdown > ul > li:hover > .submenu {
-    display: block;
-}
-
-#urunler-dropdown .submenu a {
     white-space: nowrap;
 }
 
