--- a/styles.css
+++ b/styles.css
@@ -25,56 +25,19 @@ header {
 
 /* Drop-down menü stili */
 .dropdown {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    z-index: 10;
-    background-color: #fff;
+    display: inline-block;
+    margin-left: 20px; /* Sol tarafa hizalar */
+    margin-top: 10px; /* İletişim bilgileri ile hizalar */
+}
+
+.dropdown select {
+    padding: 10px;
     border: 2px solid #ff6347; /* Kırmızımsı çerçeve rengi */
     border-radius: 5px;
-    padding: 10px; /* Menüye iç boşluk ekler */
-}
-
-.dropdown ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.dropdown > ul > li {
-    position: relative;
-}
-
-.dropdown a {
-    display: block;
-    padding: 10px;
-    background-color: #fff;
-    color: #333;
-    text-decoration: none;
-    border-bottom: 1px solid #ff6347; /* Kırmızımsı çerçeve rengi */
-}
-
-.dropdown a:hover {
-    background-color: #ff6347;
-    color: white;
-}
-
-.submenu {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: 0;
-    z-index: 1000;
-    background-color: #fff;
-    border: 2px solid #ff6347; /* Kırmızımsı çerçeve rengi */
-}
-
-.dropdown > ul > li:hover > .submenu {
-    display: block;
-}
-
-.submenu a {
-    white-space: nowrap;
+    background-color: #fff; /* Beyaz arka plan */
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    color: #333; /* Metin rengi */
 }
 
 /* Başlık arka planının üzerine hafif bir opaklık katmanı ekleyerek okunurluğu arttırma */
