--- a/styles.css
+++ b/styles.css
@@ -65,16 +65,20 @@ header h1:hover {
     height: auto;
 }
 
-/* İletişim bilgileri sağda olacak */
-#contact-info {
-    text-align: right;
+/* İletişim bilgileri sağ üst köşede ve yan yana olacak */
+.contact-info {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
 }
 
 /* İletişim detayları için stil */
 .contact-details {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    margin-left: 20px;
 }
 
 /* Instagram logosu */
@@ -93,7 +97,6 @@ header h1:hover {
     font-weight: 600;
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
 }
 
 /* Instagram metninin stilini ayarlama */
@@ -111,32 +114,23 @@ header h1:hover {
 
 /* WhatsApp logosunun boyutlandırılması */
 #whatsapp-logo {
-    width: 100px;
+    width: 30px;
     height: auto;
     margin-right: 10px;
-    margin-left: 10px;
 }
 
 .whatsapp-link {
     font-family: 'Roboto', sans-serif;
-    font-size: 24px;
+    font-size: 18px;
     color: #25D366;
     text-decoration: none;
     font-weight: 600;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .whatsapp-link:hover {
     text-decoration: underline;
-}
-
-/* WhatsApp logosunun altına hizalama */
-.whatsapp-container {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
 }
 
 /* Ürün listesi */
@@ -224,6 +218,9 @@ header h1:hover {
     width: 400px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     position: relative;
+    margin: auto;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .modal-content h2 {
@@ -260,15 +257,17 @@ header h1:hover {
 
 /* İletişim Bilgileri */
 .contact-info {
-    margin-top: 50px;
-    text-align: center;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .contact-details {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    margin-left: 20px;
 }
 
 /* Instagram ve WhatsApp logoları */
@@ -300,7 +299,7 @@ header h1:hover {
 /* WhatsApp linki */
 .whatsapp-link {
     font-family: 'Roboto', sans-serif;
-    font-size: 24px;
+    font-size: 18px;
     color: #25D366;
     text-decoration: none;
     font-weight: 600;
@@ -362,7 +361,7 @@ select.urun-boyut-secimi:focus {
 
 /* Dropdown menü seçenekleri */
 select.urun-boyut-secimi option {
-    padding: 1px;
+    padding: 10px;
     background-color: #fff;
     color: #333;
 }
