--- a/styles.css
+++ b/styles.css
@@ -452,9 +452,10 @@ select.urun-tip-secimi option {
     }
 
     .contact-info {
-        flex-direction: column;
-        top: 10px;
-        right: 10px;
+        top: auto;
+        bottom: 10px;
+        right: 50%;
+        transform: translateX(50%);
     }
 
     .contact-details {
@@ -501,8 +502,10 @@ select.urun-tip-secimi option {
     }
 
     .contact-info {
-        top: 5px;
-        right: 5px;
+        top: auto;
+        bottom: 5px;
+        right: 50%;
+        transform: translateX(50%);
     }
 
     .urun {
@@ -525,7 +528,7 @@ select.urun-tip-secimi option {
         margin: 0 5px;
     }
 
-    .filter-container {
+     .filter-container {
         flex-direction: column;
         align-items: center;
     }
