--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,21 @@ header h1:hover {
     color: #d75a93;
 }
 
+/* İletişim Bilgileri */
+.contact-info {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.contact-details {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
 /* Instagram ve WhatsApp logoları */
 #instagram-logo {
     width: 30px;
