--- a/styles.css
+++ b/styles.css
@@ -454,8 +454,10 @@ select.urun-tip-secimi option {
     .contact-info {
         top: auto;
         bottom: 10px;
-        right: 50%;
-        transform: translateX(50%);
+        right: 20px;
+        left: 20px;
+        justify-content: space-between;
+        flex-direction: column;
     }
 
     .contact-details {
@@ -504,8 +506,10 @@ select.urun-tip-secimi option {
     .contact-info {
         top: auto;
         bottom: 5px;
-        right: 50%;
-        transform: translateX(50%);
+        right: 20px;
+        left: 20px;
+        justify-content: space-between;
+        flex-direction: column;
     }
 
     .urun {
