--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ header h1 {
         position: static;
         margin-top: 20px;
         justify-content: center;
+        color: black; /* Font rengini siyah yap */
     }
 }
 
